cs22b046_project/y.output
Grammar

    0 $accept: program $end

    1 program: O P stmt_list

    2 stmt_list: stmt_list M stmt
    3          | stmt

    4 stmt: DECLARE_STMT ';'
    5     | ASSIGN_STMT ';'
    6     | CONTROL_FLOW_STMT
    7     | LB Q stmt_list RB
    8     | LB RB
    9     | expr ';'
   10     | error

   11 DECLARE_STMT: B A comp
   12             | ε

   13 comp: LS NUMBER RS comp
   14     | ε

   15 A: A ',' IDENTIFIER ASSIGN expr
   16  | A ',' IDENTIFIER
   17  | IDENTIFIER
   18  | IDENTIFIER ASSIGN expr

   19 CONTROL_FLOW_STMT: IF '(' expr ')' M stmt
   20                  | IF '(' expr ')' M stmt ELSE N M stmt
   21                  | WHILE M '(' expr ')' M stmt
   22                  | IF '(' ')'

   23 ASSIGN_STMT: expr ASSIGN expr

   24 B: INT
   25  | FLOAT
   26  | CHAR

   27 ASSIGN: EQ
   28       | PEQ
   29       | MEQ
   30       | MLEQ
   31       | DEQ

   32 expr: expr '+' expr
   33     | expr '-' expr
   34     | expr '*' expr
   35     | expr '/' expr
   36     | expr '%' expr
   37     | '(' expr ')'
   38     | expr GT expr
   39     | expr LT expr
   40     | expr GTE expr
   41     | expr LTE expr
   42     | expr NE expr
   43     | expr EE expr
   44     | expr AND M expr
   45     | expr OR N expr
   46     | NN expr
   47     | '(' expr error
   48     | term
   49     | T
   50     | F

   51 N: ε

   52 M: ε

   53 O: ε

   54 P: ε

   55 Q: ε

   56 term: UM IDENTIFIER
   57     | IDENTIFIER
   58     | UM DOUBLE IDENTIFIER
   59     | DOUBLE IDENTIFIER
   60     | UM IDENTIFIER DOUBLE
   61     | IDENTIFIER DOUBLE
   62     | UM NUMBER
   63     | NUMBER
   64     | UM DOUBLE IDENTIFIER DOUBLE
   65     | UM PP NUMBER
   66     | UM MM NUMBER
   67     | UM NUMBER PP
   68     | UM NUMBER MM
   69     | UM DOUBLE IDENTIFIER IDENTIFIER
   70     | UM IDENTIFIER DOUBLE IDENTIFIER
   71     | UM DOUBLE IDENTIFIER NUMBER
   72     | UM IDENTIFIER DOUBLE NUMBER
   73     | UM NUMBER IDENTIFIER
   74     | UM IDENTIFIER NUMBER
   75     | UM IDENTIFIER DOUBLE DOUBLE
   76     | DOUBLE IDENTIFIER DOUBLE
   77     | PP NUMBER
   78     | MM NUMBER
   79     | NUMBER PP
   80     | NUMBER MM
   81     | DOUBLE IDENTIFIER IDENTIFIER
   82     | IDENTIFIER DOUBLE IDENTIFIER
   83     | DOUBLE IDENTIFIER NUMBER
   84     | IDENTIFIER DOUBLE NUMBER
   85     | NUMBER IDENTIFIER
   86     | IDENTIFIER NUMBER
   87     | IDENTIFIER DOUBLE DOUBLE

   88 UM: '-'

   89 DOUBLE: PP
   90       | MM


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 36
    '(' (40) 19 20 21 22 37 47
    ')' (41) 19 20 21 22 37
    '*' (42) 34
    '+' (43) 32
    ',' (44) 15 16
    '-' (45) 33 88
    '/' (47) 35
    ';' (59) 4 5 9
    error (256) 10 47
    IDENTIFIER <value> (258) 15 16 17 18 56 57 58 59 60 61 64 69 70 71 72 73 74 75 76 81 82 83 84 85 86 87
    NUMBER <value> (259) 13 62 63 65 66 67 68 71 72 73 74 77 78 79 80 83 84 85 86
    EQ <value> (260) 27
    PEQ <value> (261) 28
    MEQ <value> (262) 29
    MLEQ <value> (263) 30
    DEQ <value> (264) 31
    MM <value> (265) 66 68 78 80 90
    PP <value> (266) 65 67 77 79 89
    LB <value> (267) 7 8
    RB <value> (268) 7 8
    GT <value> (269) 38
    LT <value> (270) 39
    GTE <value> (271) 40
    LTE <value> (272) 41
    NE <value> (273) 42
    EE <value> (274) 43
    AND <value> (275) 44
    OR <value> (276) 45
    IF <value> (277) 19 20 22
    ELSE <value> (278) 20
    T <value> (279) 49
    F <value> (280) 50
    WHILE <value> (281) 21
    NN <value> (282) 46
    INT <value> (283) 24
    FLOAT <value> (284) 25
    CHAR <value> (285) 26
    LS <value> (286) 13
    RS <value> (287) 13


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    program (43)
        on left: 1
        on right: 0
    stmt_list <node> (44)
        on left: 2 3
        on right: 1 2 7
    stmt <node> (45)
        on left: 4 5 6 7 8 9 10
        on right: 2 3 19 20 21
    DECLARE_STMT (46)
        on left: 11 12
        on right: 4
    comp <type> (47)
        on left: 13 14
        on right: 11 13
    A (48)
        on left: 15 16 17 18
        on right: 11 15 16
    CONTROL_FLOW_STMT <node> (49)
        on left: 19 20 21 22
        on right: 6
    ASSIGN_STMT <node> (50)
        on left: 23
        on right: 5
    B <type> (51)
        on left: 24 25 26
        on right: 11
    ASSIGN <node> (52)
        on left: 27 28 29 30 31
        on right: 15 18 23
    expr <node> (53)
        on left: 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50
        on right: 9 15 18 19 20 21 23 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47
    N <instr> (54)
        on left: 51
        on right: 20 45
    M <instr> (55)
        on left: 52
        on right: 2 19 20 21 44
    O (56)
        on left: 53
        on right: 1
    P (57)
        on left: 54
        on right: 1
    Q (58)
        on left: 55
        on right: 7
    term <node> (59)
        on left: 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87
        on right: 48
    UM <node> (60)
        on left: 88
        on right: 56 58 60 62 64 65 66 67 68 69 70 71 72 73 74 75
    DOUBLE <node> (61)
        on left: 89 90
        on right: 58 59 60 61 64 69 70 71 72 75 76 81 82 83 84 87


State 0

    0 $accept: • program $end

    $default  reduce using rule 53 (O)

    program  go to state 1
    O        go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: O • P stmt_list

    $default  reduce using rule 54 (P)

    P  go to state 4


State 3

    0 $accept: program $end •

    $default  accept


State 4

    1 program: O P • stmt_list

    error       shift, and go to state 5
    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    MM          shift, and go to state 8
    PP          shift, and go to state 9
    LB          shift, and go to state 10
    IF          shift, and go to state 11
    T           shift, and go to state 12
    F           shift, and go to state 13
    WHILE       shift, and go to state 14
    NN          shift, and go to state 15
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    CHAR        shift, and go to state 18
    '-'         shift, and go to state 19
    '('         shift, and go to state 20

    ';'  reduce using rule 12 (DECLARE_STMT)

    stmt_list          go to state 21
    stmt               go to state 22
    DECLARE_STMT       go to state 23
    CONTROL_FLOW_STMT  go to state 24
    ASSIGN_STMT        go to state 25
    B                  go to state 26
    expr               go to state 27
    term               go to state 28
    UM                 go to state 29
    DOUBLE             go to state 30


State 5

   10 stmt: error •

    $default  reduce using rule 10 (stmt)


State 6

   57 term: IDENTIFIER •
   61     | IDENTIFIER • DOUBLE
   82     | IDENTIFIER • DOUBLE IDENTIFIER
   84     | IDENTIFIER • DOUBLE NUMBER
   86     | IDENTIFIER • NUMBER
   87     | IDENTIFIER • DOUBLE DOUBLE

    NUMBER  shift, and go to state 31
    MM      shift, and go to state 32
    PP      shift, and go to state 33

    $default  reduce using rule 57 (term)

    DOUBLE  go to state 34


State 7

   63 term: NUMBER •
   79     | NUMBER • PP
   80     | NUMBER • MM
   85     | NUMBER • IDENTIFIER

    IDENTIFIER  shift, and go to state 35
    MM          shift, and go to state 36
    PP          shift, and go to state 37

    $default  reduce using rule 63 (term)


State 8

   78 term: MM • NUMBER
   90 DOUBLE: MM •

    NUMBER  shift, and go to state 38

    $default  reduce using rule 90 (DOUBLE)


State 9

   77 term: PP • NUMBER
   89 DOUBLE: PP •

    NUMBER  shift, and go to state 39

    $default  reduce using rule 89 (DOUBLE)


State 10

    7 stmt: LB • Q stmt_list RB
    8     | LB • RB

    RB  shift, and go to state 40

    $default  reduce using rule 55 (Q)

    Q  go to state 41


State 11

   19 CONTROL_FLOW_STMT: IF • '(' expr ')' M stmt
   20                  | IF • '(' expr ')' M stmt ELSE N M stmt
   22                  | IF • '(' ')'

    '('  shift, and go to state 42


State 12

   49 expr: T •

    $default  reduce using rule 49 (expr)


State 13

   50 expr: F •

    $default  reduce using rule 50 (expr)


State 14

   21 CONTROL_FLOW_STMT: WHILE • M '(' expr ')' M stmt

    $default  reduce using rule 52 (M)

    M  go to state 43


State 15

   46 expr: NN • expr

    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    MM          shift, and go to state 8
    PP          shift, and go to state 9
    T           shift, and go to state 12
    F           shift, and go to state 13
    NN          shift, and go to state 15
    '-'         shift, and go to state 19
    '('         shift, and go to state 20

    expr    go to state 44
    term    go to state 28
    UM      go to state 29
    DOUBLE  go to state 30


State 16

   24 B: INT •

    $default  reduce using rule 24 (B)


State 17

   25 B: FLOAT •

    $default  reduce using rule 25 (B)


State 18

   26 B: CHAR •

    $default  reduce using rule 26 (B)


State 19

   88 UM: '-' •

    $default  reduce using rule 88 (UM)


State 20

   37 expr: '(' • expr ')'
   47     | '(' • expr error

    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    MM          shift, and go to state 8
    PP          shift, and go to state 9
    T           shift, and go to state 12
    F           shift, and go to state 13
    NN          shift, and go to state 15
    '-'         shift, and go to state 19
    '('         shift, and go to state 20

    expr    go to state 45
    term    go to state 28
    UM      go to state 29
    DOUBLE  go to state 30


State 21

    1 program: O P stmt_list •
    2 stmt_list: stmt_list • M stmt

    $end      reduce using rule 1 (program)
    $default  reduce using rule 52 (M)

    M  go to state 46


State 22

    3 stmt_list: stmt •

    $default  reduce using rule 3 (stmt_list)


State 23

    4 stmt: DECLARE_STMT • ';'

    ';'  shift, and go to state 47


State 24

    6 stmt: CONTROL_FLOW_STMT •

    $default  reduce using rule 6 (stmt)


State 25

    5 stmt: ASSIGN_STMT • ';'

    ';'  shift, and go to state 48


State 26

   11 DECLARE_STMT: B • A comp

    IDENTIFIER  shift, and go to state 49

    A  go to state 50


State 27

    9 stmt: expr • ';'
   23 ASSIGN_STMT: expr • ASSIGN expr
   32 expr: expr • '+' expr
   33     | expr • '-' expr
   34     | expr • '*' expr
   35     | expr • '/' expr
   36     | expr • '%' expr
   38     | expr • GT expr
   39     | expr • LT expr
   40     | expr • GTE expr
   41     | expr • LTE expr
   42     | expr • NE expr
   43     | expr • EE expr
   44     | expr • AND M expr
   45     | expr • OR N expr

    EQ    shift, and go to state 51
    PEQ   shift, and go to state 52
    MEQ   shift, and go to state 53
    MLEQ  shift, and go to state 54
    DEQ   shift, and go to state 55
    GT    shift, and go to state 56
    LT    shift, and go to state 57
    GTE   shift, and go to state 58
    LTE   shift, and go to state 59
    NE    shift, and go to state 60
    EE    shift, and go to state 61
    AND   shift, and go to state 62
    OR    shift, and go to state 63
    '+'   shift, and go to state 64
    '-'   shift, and go to state 65
    '*'   shift, and go to state 66
    '/'   shift, and go to state 67
    '%'   shift, and go to state 68
    ';'   shift, and go to state 69

    ASSIGN  go to state 70


State 28

   48 expr: term •

    $default  reduce using rule 48 (expr)


State 29

   56 term: UM • IDENTIFIER
   58     | UM • DOUBLE IDENTIFIER
   60     | UM • IDENTIFIER DOUBLE
   62     | UM • NUMBER
   64     | UM • DOUBLE IDENTIFIER DOUBLE
   65     | UM • PP NUMBER
   66     | UM • MM NUMBER
   67     | UM • NUMBER PP
   68     | UM • NUMBER MM
   69     | UM • DOUBLE IDENTIFIER IDENTIFIER
   70     | UM • IDENTIFIER DOUBLE IDENTIFIER
   71     | UM • DOUBLE IDENTIFIER NUMBER
   72     | UM • IDENTIFIER DOUBLE NUMBER
   73     | UM • NUMBER IDENTIFIER
   74     | UM • IDENTIFIER NUMBER
   75     | UM • IDENTIFIER DOUBLE DOUBLE

    IDENTIFIER  shift, and go to state 71
    NUMBER      shift, and go to state 72
    MM          shift, and go to state 73
    PP          shift, and go to state 74

    DOUBLE  go to state 75


State 30

   59 term: DOUBLE • IDENTIFIER
   76     | DOUBLE • IDENTIFIER DOUBLE
   81     | DOUBLE • IDENTIFIER IDENTIFIER
   83     | DOUBLE • IDENTIFIER NUMBER

    IDENTIFIER  shift, and go to state 76


State 31

   86 term: IDENTIFIER NUMBER •

    $default  reduce using rule 86 (term)


State 32

   90 DOUBLE: MM •

    $default  reduce using rule 90 (DOUBLE)


State 33

   89 DOUBLE: PP •

    $default  reduce using rule 89 (DOUBLE)


State 34

   61 term: IDENTIFIER DOUBLE •
   82     | IDENTIFIER DOUBLE • IDENTIFIER
   84     | IDENTIFIER DOUBLE • NUMBER
   87     | IDENTIFIER DOUBLE • DOUBLE

    IDENTIFIER  shift, and go to state 77
    NUMBER      shift, and go to state 78
    MM          shift, and go to state 32
    PP          shift, and go to state 33

    $default  reduce using rule 61 (term)

    DOUBLE  go to state 79


State 35

   85 term: NUMBER IDENTIFIER •

    $default  reduce using rule 85 (term)


State 36

   80 term: NUMBER MM •

    $default  reduce using rule 80 (term)


State 37

   79 term: NUMBER PP •

    $default  reduce using rule 79 (term)


State 38

   78 term: MM NUMBER •

    $default  reduce using rule 78 (term)


State 39

   77 term: PP NUMBER •

    $default  reduce using rule 77 (term)


State 40

    8 stmt: LB RB •

    $default  reduce using rule 8 (stmt)


State 41

    7 stmt: LB Q • stmt_list RB

    error       shift, and go to state 5
    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    MM          shift, and go to state 8
    PP          shift, and go to state 9
    LB          shift, and go to state 10
    IF          shift, and go to state 11
    T           shift, and go to state 12
    F           shift, and go to state 13
    WHILE       shift, and go to state 14
    NN          shift, and go to state 15
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    CHAR        shift, and go to state 18
    '-'         shift, and go to state 19
    '('         shift, and go to state 20

    ';'  reduce using rule 12 (DECLARE_STMT)

    stmt_list          go to state 80
    stmt               go to state 22
    DECLARE_STMT       go to state 23
    CONTROL_FLOW_STMT  go to state 24
    ASSIGN_STMT        go to state 25
    B                  go to state 26
    expr               go to state 27
    term               go to state 28
    UM                 go to state 29
    DOUBLE             go to state 30


State 42

   19 CONTROL_FLOW_STMT: IF '(' • expr ')' M stmt
   20                  | IF '(' • expr ')' M stmt ELSE N M stmt
   22                  | IF '(' • ')'

    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    MM          shift, and go to state 8
    PP          shift, and go to state 9
    T           shift, and go to state 12
    F           shift, and go to state 13
    NN          shift, and go to state 15
    '-'         shift, and go to state 19
    '('         shift, and go to state 20
    ')'         shift, and go to state 81

    expr    go to state 82
    term    go to state 28
    UM      go to state 29
    DOUBLE  go to state 30


State 43

   21 CONTROL_FLOW_STMT: WHILE M • '(' expr ')' M stmt

    '('  shift, and go to state 83


State 44

   32 expr: expr • '+' expr
   33     | expr • '-' expr
   34     | expr • '*' expr
   35     | expr • '/' expr
   36     | expr • '%' expr
   38     | expr • GT expr
   39     | expr • LT expr
   40     | expr • GTE expr
   41     | expr • LTE expr
   42     | expr • NE expr
   43     | expr • EE expr
   44     | expr • AND M expr
   45     | expr • OR N expr
   46     | NN expr •

    $default  reduce using rule 46 (expr)


State 45

   32 expr: expr • '+' expr
   33     | expr • '-' expr
   34     | expr • '*' expr
   35     | expr • '/' expr
   36     | expr • '%' expr
   37     | '(' expr • ')'
   38     | expr • GT expr
   39     | expr • LT expr
   40     | expr • GTE expr
   41     | expr • LTE expr
   42     | expr • NE expr
   43     | expr • EE expr
   44     | expr • AND M expr
   45     | expr • OR N expr
   47     | '(' expr • error

    error  shift, and go to state 84
    GT     shift, and go to state 56
    LT     shift, and go to state 57
    GTE    shift, and go to state 58
    LTE    shift, and go to state 59
    NE     shift, and go to state 60
    EE     shift, and go to state 61
    AND    shift, and go to state 62
    OR     shift, and go to state 63
    '+'    shift, and go to state 64
    '-'    shift, and go to state 65
    '*'    shift, and go to state 66
    '/'    shift, and go to state 67
    '%'    shift, and go to state 68
    ')'    shift, and go to state 85


State 46

    2 stmt_list: stmt_list M • stmt

    error       shift, and go to state 5
    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    MM          shift, and go to state 8
    PP          shift, and go to state 9
    LB          shift, and go to state 10
    IF          shift, and go to state 11
    T           shift, and go to state 12
    F           shift, and go to state 13
    WHILE       shift, and go to state 14
    NN          shift, and go to state 15
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    CHAR        shift, and go to state 18
    '-'         shift, and go to state 19
    '('         shift, and go to state 20

    ';'  reduce using rule 12 (DECLARE_STMT)

    stmt               go to state 86
    DECLARE_STMT       go to state 23
    CONTROL_FLOW_STMT  go to state 24
    ASSIGN_STMT        go to state 25
    B                  go to state 26
    expr               go to state 27
    term               go to state 28
    UM                 go to state 29
    DOUBLE             go to state 30


State 47

    4 stmt: DECLARE_STMT ';' •

    $default  reduce using rule 4 (stmt)


State 48

    5 stmt: ASSIGN_STMT ';' •

    $default  reduce using rule 5 (stmt)


State 49

   17 A: IDENTIFIER •
   18  | IDENTIFIER • ASSIGN expr

    EQ    shift, and go to state 51
    PEQ   shift, and go to state 52
    MEQ   shift, and go to state 53
    MLEQ  shift, and go to state 54
    DEQ   shift, and go to state 55

    $default  reduce using rule 17 (A)

    ASSIGN  go to state 87


State 50

   11 DECLARE_STMT: B A • comp
   15 A: A • ',' IDENTIFIER ASSIGN expr
   16  | A • ',' IDENTIFIER

    LS   shift, and go to state 88
    ','  shift, and go to state 89

    $default  reduce using rule 14 (comp)

    comp  go to state 90


State 51

   27 ASSIGN: EQ •

    $default  reduce using rule 27 (ASSIGN)


State 52

   28 ASSIGN: PEQ •

    $default  reduce using rule 28 (ASSIGN)


State 53

   29 ASSIGN: MEQ •

    $default  reduce using rule 29 (ASSIGN)


State 54

   30 ASSIGN: MLEQ •

    $default  reduce using rule 30 (ASSIGN)


State 55

   31 ASSIGN: DEQ •

    $default  reduce using rule 31 (ASSIGN)


State 56

   38 expr: expr GT • expr

    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    MM          shift, and go to state 8
    PP          shift, and go to state 9
    T           shift, and go to state 12
    F           shift, and go to state 13
    NN          shift, and go to state 15
    '-'         shift, and go to state 19
    '('         shift, and go to state 20

    expr    go to state 91
    term    go to state 28
    UM      go to state 29
    DOUBLE  go to state 30


State 57

   39 expr: expr LT • expr

    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    MM          shift, and go to state 8
    PP          shift, and go to state 9
    T           shift, and go to state 12
    F           shift, and go to state 13
    NN          shift, and go to state 15
    '-'         shift, and go to state 19
    '('         shift, and go to state 20

    expr    go to state 92
    term    go to state 28
    UM      go to state 29
    DOUBLE  go to state 30


State 58

   40 expr: expr GTE • expr

    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    MM          shift, and go to state 8
    PP          shift, and go to state 9
    T           shift, and go to state 12
    F           shift, and go to state 13
    NN          shift, and go to state 15
    '-'         shift, and go to state 19
    '('         shift, and go to state 20

    expr    go to state 93
    term    go to state 28
    UM      go to state 29
    DOUBLE  go to state 30


State 59

   41 expr: expr LTE • expr

    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    MM          shift, and go to state 8
    PP          shift, and go to state 9
    T           shift, and go to state 12
    F           shift, and go to state 13
    NN          shift, and go to state 15
    '-'         shift, and go to state 19
    '('         shift, and go to state 20

    expr    go to state 94
    term    go to state 28
    UM      go to state 29
    DOUBLE  go to state 30


State 60

   42 expr: expr NE • expr

    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    MM          shift, and go to state 8
    PP          shift, and go to state 9
    T           shift, and go to state 12
    F           shift, and go to state 13
    NN          shift, and go to state 15
    '-'         shift, and go to state 19
    '('         shift, and go to state 20

    expr    go to state 95
    term    go to state 28
    UM      go to state 29
    DOUBLE  go to state 30


State 61

   43 expr: expr EE • expr

    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    MM          shift, and go to state 8
    PP          shift, and go to state 9
    T           shift, and go to state 12
    F           shift, and go to state 13
    NN          shift, and go to state 15
    '-'         shift, and go to state 19
    '('         shift, and go to state 20

    expr    go to state 96
    term    go to state 28
    UM      go to state 29
    DOUBLE  go to state 30


State 62

   44 expr: expr AND • M expr

    $default  reduce using rule 52 (M)

    M  go to state 97


State 63

   45 expr: expr OR • N expr

    $default  reduce using rule 51 (N)

    N  go to state 98


State 64

   32 expr: expr '+' • expr

    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    MM          shift, and go to state 8
    PP          shift, and go to state 9
    T           shift, and go to state 12
    F           shift, and go to state 13
    NN          shift, and go to state 15
    '-'         shift, and go to state 19
    '('         shift, and go to state 20

    expr    go to state 99
    term    go to state 28
    UM      go to state 29
    DOUBLE  go to state 30


State 65

   33 expr: expr '-' • expr

    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    MM          shift, and go to state 8
    PP          shift, and go to state 9
    T           shift, and go to state 12
    F           shift, and go to state 13
    NN          shift, and go to state 15
    '-'         shift, and go to state 19
    '('         shift, and go to state 20

    expr    go to state 100
    term    go to state 28
    UM      go to state 29
    DOUBLE  go to state 30


State 66

   34 expr: expr '*' • expr

    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    MM          shift, and go to state 8
    PP          shift, and go to state 9
    T           shift, and go to state 12
    F           shift, and go to state 13
    NN          shift, and go to state 15
    '-'         shift, and go to state 19
    '('         shift, and go to state 20

    expr    go to state 101
    term    go to state 28
    UM      go to state 29
    DOUBLE  go to state 30


State 67

   35 expr: expr '/' • expr

    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    MM          shift, and go to state 8
    PP          shift, and go to state 9
    T           shift, and go to state 12
    F           shift, and go to state 13
    NN          shift, and go to state 15
    '-'         shift, and go to state 19
    '('         shift, and go to state 20

    expr    go to state 102
    term    go to state 28
    UM      go to state 29
    DOUBLE  go to state 30


State 68

   36 expr: expr '%' • expr

    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    MM          shift, and go to state 8
    PP          shift, and go to state 9
    T           shift, and go to state 12
    F           shift, and go to state 13
    NN          shift, and go to state 15
    '-'         shift, and go to state 19
    '('         shift, and go to state 20

    expr    go to state 103
    term    go to state 28
    UM      go to state 29
    DOUBLE  go to state 30


State 69

    9 stmt: expr ';' •

    $default  reduce using rule 9 (stmt)


State 70

   23 ASSIGN_STMT: expr ASSIGN • expr

    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    MM          shift, and go to state 8
    PP          shift, and go to state 9
    T           shift, and go to state 12
    F           shift, and go to state 13
    NN          shift, and go to state 15
    '-'         shift, and go to state 19
    '('         shift, and go to state 20

    expr    go to state 104
    term    go to state 28
    UM      go to state 29
    DOUBLE  go to state 30


State 71

   56 term: UM IDENTIFIER •
   60     | UM IDENTIFIER • DOUBLE
   70     | UM IDENTIFIER • DOUBLE IDENTIFIER
   72     | UM IDENTIFIER • DOUBLE NUMBER
   74     | UM IDENTIFIER • NUMBER
   75     | UM IDENTIFIER • DOUBLE DOUBLE

    NUMBER  shift, and go to state 105
    MM      shift, and go to state 32
    PP      shift, and go to state 33

    $default  reduce using rule 56 (term)

    DOUBLE  go to state 106


State 72

   62 term: UM NUMBER •
   67     | UM NUMBER • PP
   68     | UM NUMBER • MM
   73     | UM NUMBER • IDENTIFIER

    IDENTIFIER  shift, and go to state 107
    MM          shift, and go to state 108
    PP          shift, and go to state 109

    $default  reduce using rule 62 (term)


State 73

   66 term: UM MM • NUMBER
   90 DOUBLE: MM •

    NUMBER  shift, and go to state 110

    $default  reduce using rule 90 (DOUBLE)


State 74

   65 term: UM PP • NUMBER
   89 DOUBLE: PP •

    NUMBER  shift, and go to state 111

    $default  reduce using rule 89 (DOUBLE)


State 75

   58 term: UM DOUBLE • IDENTIFIER
   64     | UM DOUBLE • IDENTIFIER DOUBLE
   69     | UM DOUBLE • IDENTIFIER IDENTIFIER
   71     | UM DOUBLE • IDENTIFIER NUMBER

    IDENTIFIER  shift, and go to state 112


State 76

   59 term: DOUBLE IDENTIFIER •
   76     | DOUBLE IDENTIFIER • DOUBLE
   81     | DOUBLE IDENTIFIER • IDENTIFIER
   83     | DOUBLE IDENTIFIER • NUMBER

    IDENTIFIER  shift, and go to state 113
    NUMBER      shift, and go to state 114
    MM          shift, and go to state 32
    PP          shift, and go to state 33

    $default  reduce using rule 59 (term)

    DOUBLE  go to state 115


State 77

   82 term: IDENTIFIER DOUBLE IDENTIFIER •

    $default  reduce using rule 82 (term)


State 78

   84 term: IDENTIFIER DOUBLE NUMBER •

    $default  reduce using rule 84 (term)


State 79

   87 term: IDENTIFIER DOUBLE DOUBLE •

    $default  reduce using rule 87 (term)


State 80

    2 stmt_list: stmt_list • M stmt
    7 stmt: LB Q stmt_list • RB

    RB  shift, and go to state 116

    $default  reduce using rule 52 (M)

    M  go to state 46


State 81

   22 CONTROL_FLOW_STMT: IF '(' ')' •

    $default  reduce using rule 22 (CONTROL_FLOW_STMT)


State 82

   19 CONTROL_FLOW_STMT: IF '(' expr • ')' M stmt
   20                  | IF '(' expr • ')' M stmt ELSE N M stmt
   32 expr: expr • '+' expr
   33     | expr • '-' expr
   34     | expr • '*' expr
   35     | expr • '/' expr
   36     | expr • '%' expr
   38     | expr • GT expr
   39     | expr • LT expr
   40     | expr • GTE expr
   41     | expr • LTE expr
   42     | expr • NE expr
   43     | expr • EE expr
   44     | expr • AND M expr
   45     | expr • OR N expr

    GT   shift, and go to state 56
    LT   shift, and go to state 57
    GTE  shift, and go to state 58
    LTE  shift, and go to state 59
    NE   shift, and go to state 60
    EE   shift, and go to state 61
    AND  shift, and go to state 62
    OR   shift, and go to state 63
    '+'  shift, and go to state 64
    '-'  shift, and go to state 65
    '*'  shift, and go to state 66
    '/'  shift, and go to state 67
    '%'  shift, and go to state 68
    ')'  shift, and go to state 117


State 83

   21 CONTROL_FLOW_STMT: WHILE M '(' • expr ')' M stmt

    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    MM          shift, and go to state 8
    PP          shift, and go to state 9
    T           shift, and go to state 12
    F           shift, and go to state 13
    NN          shift, and go to state 15
    '-'         shift, and go to state 19
    '('         shift, and go to state 20

    expr    go to state 118
    term    go to state 28
    UM      go to state 29
    DOUBLE  go to state 30


State 84

   47 expr: '(' expr error •

    $default  reduce using rule 47 (expr)


State 85

   37 expr: '(' expr ')' •

    $default  reduce using rule 37 (expr)


State 86

    2 stmt_list: stmt_list M stmt •

    $default  reduce using rule 2 (stmt_list)


State 87

   18 A: IDENTIFIER ASSIGN • expr

    IDENTIFIER  shift, and go to state 6
    NUMBER      shift, and go to state 7
    MM          shift, and go to state 8
    PP          shift, and go to state 9
    T           shift, and go to state 12
    F           shift, and go to state 13
    NN          shift, and go to state 15
    '-'         shift, and go to state 19
    '('         shift, and go to state 20

    expr    go to state 119
    term    go to state 28
    UM      go to state 29
    DOUBLE  go to state 30


State 88

   13 comp: LS • NUMBER RS comp

    NUMBER  shift, and go to state 120


State 89

   15 A: A ',' • IDENTIFIER ASSIGN expr
   16  | A ',' • IDENTIFIER

    IDENTIFIER  shift, and go to state 121


State 90

   11 DECLARE_STMT: B A comp •

    $default  reduce using rule 11 (DECLARE_STMT)


State 91

   32 expr: expr • '+' expr
   33     | expr • '-' expr
   34     | expr • '*' expr
   35     | expr • '/' expr
   36     | expr • '%' expr
   38     | expr • GT expr
   38     | expr GT expr •
   39     | expr • LT expr
   40     | expr • GTE expr
   41     | expr • LTE expr
   42     | expr • NE expr
   43     | expr • EE expr
   44     | expr • AND M expr
   45     | expr • OR N expr

    NE   shift, and go to state 60
    EE   shift, and go to state 61
    AND  shift, and go to state 62
    OR   shift, and go to state 63
    '+'  shift, and go to state 64
    '-'  shift, and go to state 65
    '*'  shift, and go to state 66
    '/'  shift, and go to state 67
    '%'  shift, and go to state 68

    $default  reduce using rule 38 (expr)


State 92

   32 expr: expr • '+' expr
   33     | expr • '-' expr
   34     | expr • '*' expr
   35     | expr • '/' expr
   36     | expr • '%' expr
   38     | expr • GT expr
   39     | expr • LT expr
   39     | expr LT expr •
   40     | expr • GTE expr
   41     | expr • LTE expr
   42     | expr • NE expr
   43     | expr • EE expr
   44     | expr • AND M expr
   45     | expr • OR N expr

    NE   shift, and go to state 60
    EE   shift, and go to state 61
    AND  shift, and go to state 62
    OR   shift, and go to state 63
    '+'  shift, and go to state 64
    '-'  shift, and go to state 65
    '*'  shift, and go to state 66
    '/'  shift, and go to state 67
    '%'  shift, and go to state 68

    $default  reduce using rule 39 (expr)


State 93

   32 expr: expr • '+' expr
   33     | expr • '-' expr
   34     | expr • '*' expr
   35     | expr • '/' expr
   36     | expr • '%' expr
   38     | expr • GT expr
   39     | expr • LT expr
   40     | expr • GTE expr
   40     | expr GTE expr •
   41     | expr • LTE expr
   42     | expr • NE expr
   43     | expr • EE expr
   44     | expr • AND M expr
   45     | expr • OR N expr

    NE   shift, and go to state 60
    EE   shift, and go to state 61
    AND  shift, and go to state 62
    OR   shift, and go to state 63
    '+'  shift, and go to state 64
    '-'  shift, and go to state 65
    '*'  shift, and go to state 66
    '/'  shift, and go to state 67
    '%'  shift, and go to state 68
